syntax = "proto3";

package proto;

message RegisterRequest {
    string name = 1;
    string email = 2;
    int64 phoneNumber = 3;
    string password = 4;
}

message RegisterResponse {
    bool success = 1;
    string message = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    string message = 2;
}

service AuthService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
}

option go_package = ".;proto";